Fixed alignment issue for mobile customization box.

--- a/app/src/css/components/ProductDisplayOptionsTouch.scss
+++ b/app/src/css/components/ProductDisplayOptionsTouch.scss
@@ -3,6 +3,7 @@
   width: 150px;
   height: 125px;
   margin: 0 15px;
+  vertical-align: top;
 
   @include xs {
     width: 180px;
